--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.76",
     "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18"
+    "@types/react-dom": "^18.2.18",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0"
   },
   "eslintConfig": {
     "extends": [
