--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,18 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
       "@components/*": [
         "src/shared/components/*"
+      ],
+      "@img/*": [
+        "src/assets/img/*"
+      ],
+      "@svg/*": [
+        "src/assets/svg/*"
       ],
     }
   },
